@@ -1,3 +1,7 @@
+Mon Jun 10 13:08:23 2002  Stefan Bellon  <sbellon@sbellon.de>
+
+	* unix/dev.c (__fsopen): Support PipeFS.
+	
 Mon Jun 10 13:01:48 2002  Nick Burrett  <nick@dsvr.net>
 			  Stefan Bellon  <sbellon@sbellon.de>
 
